--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "playwright_assignment",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "npx playwright test && npx playwright show-report",
+    "test:headed": "npx playwright test --headed && npx playwright show-report"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
